# cuddly-octo-journey

./: CMakeLists.txt  build.sh  todo
infernoGl/: gl.cpp  gl.h
src/: app.cpp  app.h  colors.h  editor_file.h  editor_file_pool.h  editor_window.h  event_manager.h  file.h  font.h  gap_buffer.h  general.h  gl_utilities.h  key_action.h  keybindings.cpp  keybindings.h  keyboard_bindings.h  keyboard_manager.h  keywords.h  layout_manager.h  linked_lines.h  material.h  math.h  mesh.h  obj_parser.h  panel.cpp  panel.h  panel_actions.h  panel_updates.h  platform_window.h  render_buffer.h  selection.h  shader.h  shader.sources  vertex.h  window.h  window_bindings.cpp  window_bindings.h  window_sdl.h
